# product-credit-calculator

./: .gitignore  LICENSE  README.md  docker-compose.yml
src/backend/cpp/: CMakeLists.txt  Dockerfile  calculator.cpp  sorting.cpp
src/backend/cpp/include/: calculator.h  data_struct.h
src/backend/python/: Dockerfile  app.py  requirements.txt
src/frontend/: Dockerfile
src/frontend/src/: App.js
